<resources>
    <string name="app_name">ProcessDeath</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_username_or_passsword">Invalid username or password!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="name_should_not_be_blank">Name should not be blank</string>
    <string name="hobby_not_blank">Hobby should not be blank</string>
    <string name="name">Name</string>
    <string name="hobby">Hobby</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="no_data_found">No data found</string>

    <string name="logout_confirm">Logout?</string>
    <string name="are_u_sure_u_want_to_logout">Are u sure u want to logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="retry">retry</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="settings">Settings</string>
    <string name="choose_language">Choose Language</string>

    <string name="deep_link">https://www.freecharge.in/fc/app?action=view\u0026page=utility\u0026screenName=stateCityList\u0026categoryName=Education%20Fees\u0026shortCode=EF\u0026stateId=2\u0026cityId=5</string>

    <string-array name="hobbies">
        <item>Cricket</item>
        <item>Football</item>
        <item>Singing</item>
        <item>Gaming</item>
    </string-array>

    <string name="change_language">Change Language</string>

    <string-array name="settings_items">
        <item>@string/change_language</item>
        <item>@string/logout</item>
    </string-array>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
</resources>