<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/md_blue_grey_800">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".views.fragments.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.20"
        android:orientation="horizontal"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLogin"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        android:hint="@string/email"
        app:hintTextColor="@color/white"
        style="@style/MyTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/text_drawable_cursor"
            android:paddingEnd="@dimen/_40sdp"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCorrectEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintTop_toTopOf="@id/tilEmail"
        app:layout_constraintBottom_toBottomOf="@id/tilEmail"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginStart="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_correct"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClearEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        app:layout_constraintTop_toTopOf="@id/tilEmail"
        app:layout_constraintBottom_toBottomOf="@id/tilEmail"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginEnd="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        android:hint="@string/password"
        app:hintTextColor="@color/white"
        style="@style/MyTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/text_drawable_cursor"
            android:paddingEnd="@dimen/_40sdp"
            tools:ignore="RtlSymmetry"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCorrectPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintTop_toTopOf="@id/tilPassword"
        app:layout_constraintBottom_toBottomOf="@id/tilPassword"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginStart="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_correct"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClearPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toTopOf="@id/tilPassword"
        app:layout_constraintBottom_toBottomOf="@id/tilPassword"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginEnd="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_baseline_cancel_24"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/md_deep_orange_900"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@color/md_deep_orange_900"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLink"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/deep_link"
        android:textColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <include
        android:id="@+id/layoutPbBar"
        layout="@layout/layout_progress_bar"
        android:visibility="gone"
        />

</FrameLayout>