<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        layout="@layout/layout_toolbar_common"
        />
<androidx.core.widget.NestedScrollView
    android:layout_width="@dimen/_0sdp"
    android:layout_height="@dimen/_0sdp"
    android:fillViewport="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolBar"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/md_blue_grey_800">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.fragments.LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/name"
            app:hintTextColor="@color/white"
            style="@style/MyTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/text_drawable_cursor"
                android:paddingEnd="@dimen/_40sdp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClearName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tilName"
            app:layout_constraintTop_toTopOf="@id/tilName"
            app:layout_constraintBottom_toBottomOf="@id/tilName"
            app:layout_constraintVertical_bias="0.6"
            android:layout_marginEnd="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHobby"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/hobby"
            app:hintTextColor="@color/white"
            app:endIconTint="@color/white"
            style="@style/DropStyle"
            >
           <androidx.appcompat.widget.AppCompatAutoCompleteTextView
               android:id="@+id/txtHobby"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textCursorDrawable="@drawable/text_drawable_cursor"
               android:textColor="@color/white"
               android:ellipsize="end"
               android:inputType="none"
               android:maxLines="1"
               />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilHobby"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            style="@style/MyTextInputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/text_drawable_cursor"
                android:paddingEnd="@dimen/_40sdp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCorrectEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintTop_toTopOf="@id/tilEmail"
            app:layout_constraintBottom_toBottomOf="@id/tilEmail"
            app:layout_constraintVertical_bias="0.6"
            android:layout_marginStart="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_correct"
            android:visibility="gone"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClearEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toTopOf="@id/tilEmail"
            app:layout_constraintBottom_toBottomOf="@id/tilEmail"
            app:layout_constraintVertical_bias="0.6"
            android:layout_marginEnd="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="@dimen/_1sdp"
            android:hint="@string/password"
            app:hintTextColor="@color/white"
            style="@style/MyTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_drawable_cursor"
                android:paddingEnd="@dimen/_40sdp"
                tools:ignore="RtlSymmetry"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCorrectPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintTop_toTopOf="@id/tilPassword"
            app:layout_constraintBottom_toBottomOf="@id/tilPassword"
            app:layout_constraintVertical_bias="0.6"
            android:layout_marginStart="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_correct"
            android:visibility="gone"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClearPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            app:layout_constraintTop_toTopOf="@id/tilPassword"
            app:layout_constraintBottom_toBottomOf="@id/tilPassword"
            app:layout_constraintVertical_bias="0.6"
            android:layout_marginEnd="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            android:visibility="gone"
            tools:visibility="visible"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_0sdp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/md_deep_orange_900"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <include
        android:id="@+id/layoutPbBar"
        layout="@layout/layout_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>